Добавлены новые комманды в FRPO. Исправления и косметика в GUI. Исправлены ошибки.

--- a/WindowsFormsApp1/Properties/Resources.resx
+++ b/WindowsFormsApp1/Properties/Resources.resx
@@ -176,4 +176,108 @@
   <data name="FileFilterForOpenFileDialog" xml:space="preserve">
     <value>TXT Files(*.txt)|*.txt|Office Files|*.doc;*.docx;*.xlsx;*.xls;*.ppt;*.pptx|PDF Files(*.pdf)|*.pdf|Image Files|*.png;*.jpg;*.tiff;*.gif|All Files(*.*)|*.*</value>
   </data>
+  <data name="FRPODashedPattern" xml:space="preserve">
+    <value>!R! RES; UNIT C;
+MCRO DPAT;
+NEWP;
+SPD .2;
+SCP;
+SFNT "Helvetica-Nr", 10;
+TEXT "DPAT %1";
+PMRP 1.4, -.1; DPAT %1; PDRP 9, 0;
+RPP; PMRP 0, .7;
+STRK;
+ENDM;
+MZP 5, 5;
+FONT 13;
+CALL DPAT,1;
+CALL DPAT,2;
+CALL DPAT,3;
+CALL DPAT,4;
+CALL DPAT,5;
+CALL DPAT,6;
+CALL DPAT,7;
+CALL DPAT,8;
+CALL DPAT,9;
+CALL DPAT,10;
+PAGE;
+EXIT;</value>
+  </data>
+  <data name="FRPODrawCircle" xml:space="preserve">
+    <value>!R! RES; UNIT C; SLS .5;
+SPD .01; MAP 10, 1;
+CIR .1; MRP 0, .1;
+CIR .2; MRP 0, .2;
+CIR .4; MRP 0, .4;
+CIR .8; MRP 0, .8;
+SPD .02;
+CIR 1.6; MRP 0, 1.6;
+CIR 3.2; MRP 0, 3.2;
+SPD .2;
+CIR .1; MRP .2, .4;
+SFNT "Helvetica-Nr"; TEXT "Cursor now here";
+PAGE;
+EXIT;</value>
+  </data>
+  <data name="FRPODrawCube" xml:space="preserve">
+    <value>!R! RES;
+UNIT C; SPD .3;
+CMNT Cube;
+MZP 5, 10;
+DRP 4, 0, 2, -2, 0, -4, -4, 0, -2, 2, 0, 4;
+MRP 4, 0;
+DRP 0, -4, -4, 0, 4, 0, 2, -2;
+PAGE;
+EXIT;</value>
+  </data>
+  <data name="FRPODrawFilledInBlock" xml:space="preserve">
+    <value>!R! RES; UNIT C;
+MAP 5, 5;
+PAT 20;
+BOX 4, 1; BLK 4, 1;
+MRP 0, 1.5;
+BOX 4, 1; BLK 4, 1;
+MRP .9, .6;
+SFNT "Helvetica-Nr";
+TEXT "OVERPRINTING";
+MRP 0, 5;
+PAT 29; BOX 1, -4; BLK 1, -4, H;
+PAT 39; BOX 1, -3; BLK 1, -3, H;
+PAT 49; BOX 1, -2; BLK 1, -2, H;
+PAT 59; BOX 1, -1; BLK 1, -1, H;
+PAGE;
+EXIT;</value>
+  </data>
+  <data name="FRPOFillClosedPath" xml:space="preserve">
+    <value>!R! RES; UNIT C; SIMG 1;
+CMNT Drawing clusters;
+NEWP;
+PMZP 10, 12; PDRP -5.7, -1.75;
+PCRP 0, 0, 0, -3.4, 3.1, -3.6; CLSP; PAT 2; FILL;
+PMZP 10, 12; PDRP -2.6, -5.35;
+PCRP 0, 0, 2.5, -2.5, 4.9, .1; CLSP; PAT 3; FILL;
+PMZP 10, 12; PDRP 5.7, -1.75;
+PCRP 0, 0, 0, -3.5, -3.4, -3.5; CLSP; PAT 4; FILL;
+PMZP 12, 12; PDRP 5.7, -1.75;
+PCRP 0, 0, 1.5, 1.75, 0, 3.5; CLSP; PAT 5; FILL;
+PMZP 10, 12; PDRP -5.7, 1.75;
+PCRP 0, 0, 0, 3.4, 3.1, 3.6; CLSP; PAT 6; FILL;
+PMZP 10, 12; PDRP -2.6, 5.35;
+PCRP 0, 0, 2.5, 2.5, 4.9, -.1; CLSP; PAT 7; FILL;
+PMZP 10, 12; PDRP 5.7, 1.75;
+PCRP 0, 0, 0, 3.5, -3.4, 3.5; CLSP; PAT 8; FILL;
+PMZP 10, 12; PDRP -5.7, 1.75;
+PCRP 0, 0, -1.5, -1.75, 0, -3.5; CLSP; PAT 9; FILL;
+PAGE;
+EXIT;</value>
+  </data>
+  <data name="FRPOFontList" xml:space="preserve">
+    <value>!R! FLST; EXIT;</value>
+  </data>
+  <data name="FRPOInit" xml:space="preserve">
+    <value>!R! FRPO INIT; EXIT;</value>
+  </data>
+  <data name="FRPOCheckDisk" xml:space="preserve">
+    <value>!R! CDSK; EXIT;</value>
+  </data>
 </root>
