--- a/WindowsFormsApp1/Properties/Resources.resx
+++ b/WindowsFormsApp1/Properties/Resources.resx
@@ -280,4 +280,24 @@ EXIT;</value>
   <data name="FRPOCheckDisk" xml:space="preserve">
     <value>!R! CDSK; EXIT;</value>
   </data>
+  <data name="FRPOSimpleColorPalette" xml:space="preserve">
+    <value>!R! RES; UNIT C; SIMP 3;
+MCRO SIMP;
+NEWP;
+SCOL %2;
+PDRP 2, 0, 0, 2, -2, 0, 0, -2;
+FILL 1;
+PMRP .5, .5;
+ENDM;
+CALL SIMP,0,0;
+CALL SIMP,0,1;
+CALL SIMP,0,2;
+CALL SIMP,0,3;
+CALL SIMP,0,4;
+CALL SIMP,0,5;
+CALL SIMP,0,6;
+CALL SIMP,0,7;
+PAGE;
+EXIT;</value>
+  </data>
 </root>
